--- a/index.html
+++ b/index.html
@@ -10,16 +10,54 @@
     <title>Iniciar Sesion</title>
 </head>
 <body>
-    <div class="cotenedor">
-        <div class="parte-izquierda">
+    <div class="contenedor">
+        <header>
             <div class="titulo">
-                <div class="logo"><img src="images/odin-lined.png" alt=""></div> 
-                <div class="texto">ODIN</div>
+                <img src="images/odin-lined.png" alt="">
+                <h1>ODIN</h1>
             </div>
-        </div>
-        <div class="parte-derecha">
-        </div>
-    </div>
-    
+        </header>
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, deserunt? Dolore quibusdam, quasi aperiam voluptatum architecto ullam corrupti provident beatae laudantium veniam, iste qui officia unde quaerat! Commodi, nobis facere.</p>
+            <form action="" method="get">
+                <legend>Registrate!</legend>
+                <div class="secciones">
+                    <div>
+                        
+                        <div><label for="nombre">Nombre</label></div>
+                        <input type="text" id="nombre" name="nombre">
+                    </div>
+                    <div>
+                        <div><label for="apellido">Apellido</label></div>
+                        <input type="text" id="apellido" name="apellido">
+                    </div>
+                </div>
+                <div class="secciones">
+                    <div>
+                        <div><label for="correo">Correo Electronico</label></div>
+                        <input type="email" id="correo" name="correo">
+                    </div>
+                    <div>
+                        <div><label for="telefono">Telefono</label></div>
+                        <input type="tel" id="telefono" name="telefono">
+                    </div>
+                </div>
+                <div class="secciones">
+                    <div>
+                        <div><label for="contraseña">Contraseña</label></div>
+                        <input type="password" id="contraseña" name="contraseña">
+                    </div>
+                    <div>
+                        <div><label for="confirm">Repetir Contraseña</label></div>
+                        <input type="password" id="confirm" name="repetir">
+                    </div>
+                </div>
+                <div>
+                    <button type="sumbit">Crear Cuenta</button>
+                </div>
+          </form>
+          <p>Si ya tienes una cuenta <a href="">Inicia Sesion</a></p>
+        </main>
+    </div>    
 </body>
 </html>
