--- a/index.html
+++ b/index.html
@@ -19,44 +19,52 @@
         </header>
         <main>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, deserunt? Dolore quibusdam, quasi aperiam voluptatum architecto ullam corrupti provident beatae laudantium veniam, iste qui officia unde quaerat! Commodi, nobis facere.</p>
-            <form action="" method="get">
-                <legend>Registrate!</legend>
-                <div class="secciones">
-                    <div>
-                        
-                        <div><label for="nombre">Nombre</label></div>
-                        <input type="text" id="nombre" name="nombre">
+            <p> Tu sabes lo que quieres.</p>
+            <div class="contenedor-formulario">
+                <form action="" method="get">
+                    <legend>Registrate!</legend>
+                    <div class="secciones">
+                        <div>
+                            <div><label for="nombre">Nombre</label></div>
+                            <input required placeholder="Juan" type="text" id="nombre" name="nombre">
+                            <p class="error">* Campo Requerido</p>
+                        </div>
+                        <div>
+                            <div><label for="apellido">Apellido</label></div>
+                            <input required placeholder="Perez" type="text" id="apellido" name="apellido">
+                            <p class="error">* Campo Requerido</p>
+                        </div>
                     </div>
-                    <div>
-                        <div><label for="apellido">Apellido</label></div>
-                        <input type="text" id="apellido" name="apellido">
+                    <div class="secciones">
+                        <div>
+                            <div><label for="correo">Correo Electronico</label></div>
+                            <input required  placeholder="juanperez@ejemplo.com" type="email" id="correo" name="correo">
+                            <p class="error">* Campo Requerido</p>
+                        </div>
+                        <div>
+                            <div><label for="telefono">Telefono</label></div>
+                            <input required placeholder="488779960" type="tel" id="telefono" name="telefono">
+                            <p class="error">* Campo Requerido</p>
+                        </div>
                     </div>
-                </div>
-                <div class="secciones">
-                    <div>
-                        <div><label for="correo">Correo Electronico</label></div>
-                        <input type="email" id="correo" name="correo">
+                    <div class="secciones">
+                        <div>
+                            <div><label for="contraseña">Contraseña</label></div>
+                            <input required type="password" id="contraseña" name="contraseña">
+                            <p class="error">* Campo Requerido</p>
+                        </div>
+                        <div>
+                            <div><label for="confirm">Repetir Contraseña</label></div>
+                            <input required type="password" id="confirm" name="repetir">
+                            <p class="error">* Campo Requerido</p>
+                        </div>
                     </div>
-                    <div>
-                        <div><label for="telefono">Telefono</label></div>
-                        <input type="tel" id="telefono" name="telefono">
+                    <div class="boton">
+                        <button type="sumbit">Crear Cuenta</button>
                     </div>
-                </div>
-                <div class="secciones">
-                    <div>
-                        <div><label for="contraseña">Contraseña</label></div>
-                        <input type="password" id="contraseña" name="contraseña">
-                    </div>
-                    <div>
-                        <div><label for="confirm">Repetir Contraseña</label></div>
-                        <input type="password" id="confirm" name="repetir">
-                    </div>
-                </div>
-                <div>
-                    <button type="sumbit">Crear Cuenta</button>
-                </div>
-          </form>
-          <p>Si ya tienes una cuenta <a href="">Inicia Sesion</a></p>
+                </form>
+            </div>
+          <p class="ya-registrado">Ya tienes una cuenta? <a href="">Inicia Sesion</a></p>
         </main>
     </div>    
 </body>
