--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <script src="scripts.js" defer></script>
     <title>Iniciar Sesion</title>
 </head>
 <body>
@@ -27,40 +28,40 @@
                         <div>
                             <div><label for="nombre">Nombre</label></div>
                             <input required placeholder="Juan" type="text" id="nombre" name="nombre">
-                            <p class="error">* Campo Requerido</p>
+                            <p class="error nombre">* Campo Requerido</p>
                         </div>
                         <div>
                             <div><label for="apellido">Apellido</label></div>
                             <input required placeholder="Perez" type="text" id="apellido" name="apellido">
-                            <p class="error">* Campo Requerido</p>
+                            <p class="error apellido">* Campo Requerido</p>
                         </div>
                     </div>
                     <div class="secciones">
                         <div>
                             <div><label for="correo">Correo Electronico</label></div>
                             <input required  placeholder="juanperez@ejemplo.com" type="email" id="correo" name="correo">
-                            <p class="error">* Campo Requerido</p>
+                            <p class="error correo">* Campo Requerido</p>
                         </div>
                         <div>
                             <div><label for="telefono">Telefono</label></div>
                             <input required placeholder="488779960" type="tel" id="telefono" name="telefono">
-                            <p class="error">* Campo Requerido</p>
+                            <p class="error telefono">* Campo Requerido</p>
                         </div>
                     </div>
                     <div class="secciones">
                         <div>
                             <div><label for="contraseña">Contraseña</label></div>
-                            <input required type="password" id="contraseña" name="contraseña">
-                            <p class="error">* Campo Requerido</p>
+                            <input class="contraseñas-iguales" required type="password" id="contraseña" name="contraseña">
+                            <p class="error contraseña">* Campo Requerido</p>
                         </div>
                         <div>
                             <div><label for="confirm">Repetir Contraseña</label></div>
-                            <input required type="password" id="confirm" name="repetir">
-                            <p class="error">* Campo Requerido</p>
+                            <input class="contraseñas-iguales invalido" required type="password" id="confirm" name="repetir">
+                            <p class="confirm">* Campo Requerido</p>
                         </div>
                     </div>
                     <div class="boton">
-                        <button type="sumbit">Crear Cuenta</button>
+                        <button type="submit">Crear Cuenta</button>
                     </div>
                 </form>
             </div>
